--- a/blogs.html
+++ b/blogs.html
@@ -20,7 +20,7 @@
             <ul>
               <li><a class="active" href="index.php">Home</a></li>
               <li><a href="foryou.html">For You</a></li>
-              <li><a href="blogs.html">Blog</a></li>
+              <li><a href="blogs.html">New Post</a></li>
               <li><a href="posts.html">My Posts</a></li>
               
             </ul>
