--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="foryou.html">For You</a></li>
-          <li><a href="blogs.html">Blog</a></li>
+          <li><a href="blogs.html">New Post</a></li>
           <li><a href="posts.html">My Posts</a></li>
           
         </ul>
