--- a/foryou.html
+++ b/foryou.html
@@ -24,6 +24,7 @@
           <li><a href="foryou.html">For You</a></li>
           <li><a href="blogs.html">New Post</a></li>
           <li><a href="posts.html">My Posts</a></li>
+           <li><a href="#" onclick="signOut();">Sign out</a></li>
           
         </ul>
       </nav>   
@@ -130,4 +131,13 @@
             </div>
         </div>
     </div>
+    <script>
+      function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+      console.log('User signed out.');
+    });
+  }
+    </script>
 </body>
+</html>
