--- a/foryou.html
+++ b/foryou.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1.0">
         <title>Grey Blogs</title>
-        <link rel="stylesheet" href="tags.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"> </script>
     </head>
