--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
+<html itemscope itemtype="http://schema.org/Article" lang="en" dir="ltr">
+<head>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+  </script>
+  <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
+  </script>
+
    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale-1.0">
