--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <label class="logo">GREY</label>
           
         <ul>
+          <input type="text" placeholder="Search..">
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="foryou.html">For You</a></li>
           <li><a href="blogs.html">New Post</a></li>
