--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           
         <ul>
           <input type="text" placeholder="Search..">
+          <button type = "submit"><i class="fa fa-search"></i></button>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="foryou.html">For You</a></li>
           <li><a href="blogs.html">New Post</a></li>
